# amazon_reviews

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: data_quality_rules.yaml  dev.toml  dev.yaml  hadoop.env  hdfs_paths.yaml  prod.yaml  spark-defaults.conf  spark_config.yaml
dags/: amazon_reviews_pipeline_dag.py
data/: README.md
data/sample/: office_products_sample.jsonl
docker/spark/: Dockerfile  requirements-spark.txt
docs/: architecture.md  data_dictionary.md  ethics_and_privacy.md  pipeline_design.md  pipeline_run_tracker.md  report_outline.md  setup_guide.md  spark_vs_hive_comparison.md  troubleshooting.md
hadoop/: hdfs_cleanup.sh  hdfs_init.sh  hdfs_structure.md  upload_raw_data.sh
hive/: README.md  hive-site.xml
hive/ddl/: 00_legacy_create_tables.sql  01_create_database.sql  02_create_bronze_table.sql  03_create_silver_table.sql  04_create_gold_tables.sql
hive/queries/: 01_exploratory_analysis.sql  02_business_insights.sql  03_quality_checks.sql  04_spark_vs_hive_comparison.sql
notebooks/: 01_dataset_understanding.ipynb
output/evidence/: 02_hdfs_raw_file_uploaded.txt  (+20 more)
reports/: README.md  amazon_reviews_project_report.txt
scripts/: bootstrap_project.sh  check_services.sh  collect_screenshot_evidence.sh  collect_screenshots_checklist.md  run_full_pipeline.sh  run_hive_queries.sh  run_ingestion.sh  run_ml_training.sh  run_processing.sh  upload_to_hdfs.sh
tests/: test_data_quality.py  test_feature_engineering.py  test_ml_pipeline.py  test_schema_checks.py  test_text_cleaning.py
(+41 files in other folders)
